--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
 
-<marquee behavior="alternate"><h2>"My Calculator"</h2></marquee>
+<head>
+
+</head> 
+
+<body bgcolor = "LightSkyBlue ">
+<marquee behavior="alternate"><h2><font color="Crimson ">"My Calculator"</font></h2></marquee>
 <center>
 <input type = "Number" id = "demo1">enter the first number
 <br>
@@ -15,48 +19,114 @@
 <button type="button" onclick="Mul()" >Multiplication..!!</button>	
 <br>
 <button type="button" onclick="Div()" >Division..!!</button>	
+
+<p id="display"></p>
 <p id="add"></p>
 <p id="sub"></p>
 <p id="mul"></p>
 <p id="div"></p>
 
 <script>	
+	var x = new Array();
+	var y = new Array();
+	var i = 0;
+
+	function clean(elementID)
+	{
+    	document.getElementById(elementID).innerHTML = "";
+	}
+
 	function Add(){
-		var x,y,sum;
-		x = Number(document.getElementById("demo1").value);
-		y = Number(document.getElementById("demo2").value);
-		sum = x + y;	
-		alert(sum);	
+		clean('add');
+		clean('sub');
+		clean('mul');
+		clean('div');   
+ 
+		var sum;
+		x[i] = Number(document.getElementById("demo1").value);
+		y[i] = Number(document.getElementById("demo2").value);
+		if (x[i]==0 && y[i]==0){
+			alert("Please enter the numbers: ");
+		}
+		else{
+		sum = x[i] + y[i];	
+		alert(sum);
 		document.getElementById("add").innerHTML = "Sum of given Numbers:-   " + sum;
+		
+		}
+		i++;	
+		document.getElementById('demo1').value = '';  
+		document.getElementById('demo2').value = '';
+		     
 	}
 
 	function Sub(){
-		var x,y,sub;
-		x = Number(document.getElementById("demo1").value);
-		y = Number(document.getElementById("demo2").value);
-		sub = x - y;	
+		clean('add');
+		clean('sub');
+		clean('mul');
+		clean('div');    
+		document.clear();	
+		var sub;
+		x[i] = Number(document.getElementById("demo1").value);
+		y[i] = Number(document.getElementById("demo2").value);
+		if (x[i]==0 && y[i]==0){
+			alert("Please enter the numbers: ");
+		}
+		else{
+		sub = x[i] - y[i];	
 		alert(sub);	
 		document.getElementById("sub").innerHTML = "Substraction of given Numbers:-   " + sub;
-	}
+		}
+		i++;	
+		document.getElementById('demo1').value = '';  
+		document.getElementById('demo2').value = ''; 
+		
+}
 
 	function Mul(){
-		var x,y,mul;
-		x = Number(document.getElementById("demo1").value);
-		y = Number(document.getElementById("demo2").value);
-		mul = x * y;	
+		clean('add');
+		clean('sub');
+		clean('mul');
+		clean('div');   
+		var mul;
+		x[i] = Number(document.getElementById("demo1").value);
+		y[i] = Number(document.getElementById("demo2").value);
+		if (x[i]==0 && y[i]==0){
+			alert("Please enter the numbers: ");
+		}
+		else{
+			mul = x[i] * y[i];	
 		alert(mul);	
 		document.getElementById("mul").innerHTML = "Product of given Numbers:-   " + mul;
 	}
+	i++;	
+		document.getElementById('demo1').value = '';  
+		document.getElementById('demo2').value = '';   
+
+}
 
 	function Div(){
-		var x,y,div;
-		x = Number(document.getElementById("demo1").value);
-		y = Number(document.getElementById("demo2").value);
-		div = x / y;	
+		clean('add');
+		clean('sub');
+		clean('mul');
+		clean('div');     
+		var div;
+		x[i] = Number(document.getElementById("demo1").value);
+		y[i] = Number(document.getElementById("demo2").value);
+		if (x[i]==0 && y[i]==0){
+			alert("Please enter the numbers: ");
+		}
+		else{
+		div = x[i] / y[i];	
 		alert(div);	
 		document.getElementById("div").innerHTML = "Division of given Numbers:-   " + div;
 	}
+	i++;	
+		document.getElementById('demo1').value = '';  
+		document.getElementById('demo2').value = '';
+
+}
 </script>
-	</center>
+</center>
 </body>
 </html>
